fixed css, added break in top stories.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -124,7 +124,7 @@ body main.clock-display {
 	color: #2b2828;
 	position: absolute;
 	top: 0;
-pa	z-index: 50;
+  z-index: 50;
 }
 .clock-field .numbers .type {
   font-size: 10px;
